--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,19 @@
 image: node:latest
 
 stages:
+  - install
   - build
   - push_github
   - production
+
+install:
+  stage: install
+  script:
+    - npm i
+  artifacts:
+    paths:
+      - node_modules/
+
 
 build:
   stage: build
