--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,11 +27,7 @@ test_ci_push:
   stage: push_github
   allow_failure: false
   script:
-    - git remote add github https://github.com/mcourant/gta-ynov-webmobile.git
-    - touch test.dat
-    - echo "This is a test" > test.dat
-    - git config --global user.name "mcourant"
-    - git config --global user.email "maxime.courant@ynov.com"
+    - git remote add github https://mcourant:${PASSWORD_GITHUB}@github.com/mcourant/gta-ynov-webmobile.git
     - git add --all
     - git commit -m "GitLab Runner Push"
     - git push -u github master
