--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,6 +28,8 @@ test_ci_push:
   allow_failure: false
   script:
     - git remote add github https://mcourant:${PASSWORD_GITHUB}@github.com/mcourant/gta-ynov-webmobile.git
+    - git config --global user.name "mcourant"
+    - git config --global user.email "maxime.courant@ynov.com"
     - git add --all
     - git commit -m "GitLab Runner Push"
     - git push -u github master
