--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,7 @@ install:
   script:
     - npm i
   artifacts:
+    expire_in: 1 day
     paths:
       - node_modules/
 
@@ -20,6 +21,7 @@ build:
   script:
     - npm run build
   artifacts:
+    expire_in: 1 day
     paths:
       - dist/
 
