--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,6 @@ test_ci_push:
   stage: push_github
   allow_failure: false
   script:
-    - echo $PASSWORD_GITHUB
     - git remote add github $URL_GITHUB
     - git config --global user.name "mcourant"
     - git config --global user.email "maxime.courant@ynov.com"
@@ -45,5 +44,6 @@ production:
   script:
     - apt-get update -qy
     - apt-get install -y ruby-dev
+    - git add ./dist
     - gem install dpl
     - dpl --provider=heroku --app=gta-ynov-webmobile --api-key=b90d07c0-46b1-462c-95df-d74235d6b619 
