--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,5 +45,6 @@ production:
     - apt-get update -qy
     - apt-get install -y ruby-dev
     - git add ./dist
+    - git commit -m "Add dist"
     - gem install dpl
     - dpl --provider=heroku --app=gta-ynov-webmobile --api-key=b90d07c0-46b1-462c-95df-d74235d6b619 
