--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,6 +45,8 @@ production:
     - apt-get update -qy
     - apt-get install -y ruby-dev
     - git add ./dist
+    - git config --global user.name "mcourant"
+    - git config --global user.email "maxime.courant@ynov.com"
     - git commit -m "Add dist"
     - gem install dpl
     - dpl --provider=heroku --app=gta-ynov-webmobile --api-key=b90d07c0-46b1-462c-95df-d74235d6b619 
