--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   "dependencies": {
     "axios": "^0.18.0",
     "express": "^4.16.4",
+    "luxon": "^1.6.2",
+    "moment": "^2.22.2",
+    "sweetalert2": "^7.29.1",
     "vue": "^2.5.17",
-    "vue-router": "^3.0.1"
+    "vue-datetime": "^1.0.0-beta.8",
+    "vue-router": "^3.0.1",
+    "weekstart": "^1.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.5",
