--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap-vue": "^2.0.0-rc.11",
     "express": "^4.16.4",
     "luxon": "^1.6.2",
     "moment": "^2.22.2",
